# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  fly.toml
.sqlx/: query-da48e11a0b978a66380de30aaf8eaf99ae080dd3d1bc30df6490da160bfeeedb.json
configuration/: base.yaml  production.yaml
migrations/: 20250416081609_make_status_not_null_in_subscriptions.sql  20250416081901_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_checks.rs  helpers.rs  main.rs  subscriptions.rs
