[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"]}
sqlx-cli = { version = "0.8.3", default-features=false, features = [
    "rustls",
    "postgres"
]}
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"]}

[dependencies.sqlx]
version = "0.8.3"
default-features=false
features = [
    
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2pro"

[dev-dependencies]
reqwest = "0.12.12"
