[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-actix-web = "0.7"
secrecy = {version = "0.8.0", features = ["serde"]} # This one changed the interface in the newer versions so upgrading it will break the secrets functionality
tracing = {version = "0.1", features = ["log"]}
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
log = "0.4"
config = "0.15.11"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"]}
sqlx-cli = { version = "0.8.3", default-features=false, features = [
    "rustls",
    "postgres"
]}
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.16.0", features = ["v4"]}
chrono = { version = "0.4.40", default-features = false, features = ["clock"]}
[dependencies.sqlx]
version = "0.8.3"
default-features=false
features = [
    
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.15"


[profile.dev]
debug = 0
strip = "debuginfo"

# [profile.release]
# opt-level = 3